# libfemas

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/libfemas/: libfemas.h  types.h
src/: estimator.cpp  extractor.cpp  matcher.cpp
