<?xml version="1.0"?>
<package>
  <name>libfemas</name>
  <version>0.0.1</version>
  <description>
    ROS library for stereo feature extraction and matching and 3D pose estimation.
  </description>
  <author email="pl.negre@uib.cat">Pep Lluis Negre</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/plnegre/libfemas</url>
  <url type="bugtracker">https://github.com/plnegre/libfemas/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_geometry</run_depend>

</package>
